<resources>
    <string name="app_name">智慧社区</string>
    <string name="health_manage">健康管理</string>
    <string name="news">通知公告</string>
    <string name="online_property">线上物业</string>
    <string name="goods_order">商品订购</string>
    <string name="service_order">服务下单</string>
    <string name="building_intercom">楼宇对讲</string>
    <string name="elevator_call">电梯呼叫</string>
    <string name="call_property">呼叫物业</string>
    <string name="confirm_order">确认订单</string>
    <string name="online_repair">在线报修</string>
    <string name="goods_detail">商品详情</string>
    <string name="personal_center">个人中心</string>
    <string name="property_payment">物业缴费</string>
    <string name="guest_invitation">访客邀请</string>
    <string name="litdu_call_property">小度小度，呼叫物业</string>
    <string name="litdu_call_elevator">小度小度，呼叫电梯</string>
    <string name="litdu_call_goods">小度小度，商品订购</string>
    <string name="litdu_call_pay">小度小度，在线缴费</string>
    <string name="litdu_call_news">小度小度，通知公告</string>
    <string name="toolbar_back">返回</string>
    <string name="elevator_floor_tip">电梯目前处于%d层，请尽快至电梯口乘坐哦</string>
    <string name="south_door">南门</string>
    <string name="north_door">北门</string>
    <string name="east_door">东门</string>
    <string name="west_door">西门</string>
    <string name="community_reminder">社区温馨提示</string>
    <string name="address">诺瑞德商务广场</string>
    <string name="repair_status_undone">未处理</string>
    <string name="repair_status_done">已处理</string>
    <string name="area_list_wechat_publish">微信扫一扫手机发布</string>
    <string name="online_repair_commit">在线报修提交</string>
    <string name="price_value">￥%1$s</string>
    <string name="property_payment_time">2021年上半年物业缴费</string>
    <string name="property_payment_wechat_pay">微信扫一扫手机缴费</string>
    <string name="status_un_pay">未交费</string>
    <string name="status_pay">已交费</string>
    <string name="comments_value">%1$s评价</string>
    <string name="favorable_rate">%1$s好评率</string>
    <string name="selling_price_value">直销价：￥%1$s</string>
    <string name="member_price_value">会员价：￥%1$s</string>
    <string name="confirm_purchase">确认购买</string>
    <string name="app_quit">再按一次退出</string>
    <string name="submit_order">提交订单</string>
    <string name="delivery">配送</string>
    <string name="goods_price">商品金额</string>
    <string name="coin_discount">邻里币折扣</string>
    <string name="coupon">优惠券</string>
    <string name="pay_info">支付信息</string>
    <string name="pay_price">支付金额￥%1$s</string>
    <string name="pay_tips">请打开微信扫一扫</string>
</resources>
