<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rel"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:id="@+id/tv_south_door"
                        style="@style/building_intercome_text"
                        android:text="@string/south_door" />

                    <TextView
                        android:id="@+id/tv_north_door"
                        style="@style/building_intercome_text"
                        android:text="@string/north_door" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_east_door"
                        style="@style/building_intercome_text"
                        android:text="@string/east_door" />

                    <TextView
                        android:id="@+id/tv_west_door"
                        style="@style/building_intercome_text"
                        android:text="@string/west_door" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_detail_unit"
                        style="@style/building_intercome_text"
                        android:text="@string/app_name" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</LinearLayout>